--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ img {
   width: 164px;
   padding: 37px 34px;
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  transition: left ease 0.5s;
 }
 
 .burger-menu.active {
@@ -132,7 +133,6 @@ img {
 }
 
 .banner-right {
-  margin-left: 60px;
   display: flex;
 }
 
@@ -157,5 +157,9 @@ img {
 
 .banner-text .text-pink {
   color: #F16D7F;
+}
+
+.offer {
+  padding-top: 65px;
 }
 /*# sourceMappingURL=styles.css.map */
