--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -65,6 +65,7 @@ img
   width: 164px
   padding: 37px 34px
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
+  transition: left ease 0.5s
 
 .burger-menu.active
   display: block
@@ -97,7 +98,6 @@ img
 .banner-left
   margin-left: -230px
 .banner-right
-  margin-left: 60px
   display: flex
   .pink-brick
     width: 12px
@@ -114,3 +114,5 @@ img
     line-height: 58px
   .text-pink
     color: #F16D7F
+.offer
+  padding-top: 65px
