cart-page  completed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1197,6 +1197,14 @@ h1, h2, h3, h4, h5, h6 {
   color: #F26376;
 }
 
+.category.shopping-cart {
+  padding: 60px 0;
+}
+
+.category__title.shopping-cart__title {
+  margin-bottom: 0;
+}
+
 .basket {
   padding-top: 96px;
   padding-bottom: 128px;
@@ -1209,7 +1217,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .basket__item {
   display: flex;
-  max-width: 652px;
+  max-width: 734px;
   width: 100%;
   box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
   margin-bottom: 40px;
@@ -1227,13 +1235,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .basket__img-container {
-  width: 262px;
+  max-width: 262px;
+  width: 100%;
 }
 
 .basket__img {
   max-width: 100%;
   width: auto;
   height: 100%;
+  object-fit: cover;
 }
 
 .basket-description__row {
@@ -1247,6 +1257,14 @@ h1, h2, h3, h4, h5, h6 {
 .basket__buttons {
   display: flex;
   justify-content: space-between;
+}
+
+.basket__buttons .basket__btn {
+  margin-right: 48px;
+}
+
+.basket__buttons .basket__btn:last-of-type {
+  margin-right: 0;
 }
 
 .basket__btn {
@@ -1373,12 +1391,25 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     flex-direction: column;
   }
-  .basket__right, .basket__left {
+  .basket__right {
     width: 100%;
+  }
+  .basket__left {
+    width: 80%;
+  }
+  .basket__item {
+    max-width: 100%;
   }
   .delivery__form {
     display: flex;
     justify-content: space-around;
+  }
+  .delivery__address {
+    margin-right: 15px;
+    margin-bottom: 0;
+  }
+  .basket__buttons {
+    margin-bottom: 64px;
   }
 }
 
@@ -1475,14 +1506,25 @@ h1, h2, h3, h4, h5, h6 {
   .delivery__address {
     margin-right: 15px;
   }
+  .basket__left {
+    width: 100%;
+  }
+  .basket__buttons {
+    justify-content: center;
+  }
 }
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 756px) {
   .delivery__form {
-    flex-wrap: wrap;
+    flex-direction: column;
   }
   .delivery__address {
     max-width: 100%;
+    margin-bottom: 48px;
+  }
+  .delivery__total {
+    width: 100%;
+    text-align: center;
   }
 }
 
@@ -1508,6 +1550,19 @@ h1, h2, h3, h4, h5, h6 {
   .add-to-cart {
     top: 100px;
   }
+  .basket__buttons {
+    margin-bottom: 48px;
+  }
+  .basket__buttons .basket__btn {
+    font-size: 12px;
+    margin-right: 10px;
+  }
+  .basket {
+    padding-bottom: 96px;
+  }
+  .basket__item-info {
+    padding: 13px 53px 37px 17px;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -1529,6 +1584,18 @@ h1, h2, h3, h4, h5, h6 {
   }
   .dropdown__title {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 476px) {
+  .basket__buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+  .basket__buttons .basket__btn {
+    margin-right: 0;
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
 
