--- a/css/styles.css
+++ b/css/styles.css
@@ -1215,9 +1215,13 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
 }
 
+.basket__left {
+  max-width: 652px;
+  width: 100%;
+}
+
 .basket__item {
   display: flex;
-  max-width: 734px;
   width: 100%;
   box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
   margin-bottom: 40px;
@@ -1225,6 +1229,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .basket__item-info {
   padding: 22px 97px 62px 31px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .basket__item-title {
@@ -1232,6 +1239,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 29px;
   color: #222222;
   text-transform: uppercase;
+  margin-bottom: auto;
 }
 
 .basket__img-container {
@@ -1246,12 +1254,33 @@ h1, h2, h3, h4, h5, h6 {
   object-fit: cover;
 }
 
+.basket-description__list {
+  margin: 0;
+}
+
 .basket-description__row {
   display: flex;
+  margin-bottom: 14px;
+  align-items: center;
+}
+
+.basket-description__row:last-of-type {
+  margin-bottom: 0;
+}
+
+.basket-description__row dt {
+  color: #575757;
 }
 
 .basket-description__row dd {
-  margin-left: 0;
+  color: #6F6E6E;
+  margin-left: 8px;
+}
+
+dd.basket__item-price {
+  font-size: 22px;
+  line-height: 26px;
+  color: #EF5B70;
 }
 
 .basket__buttons {
@@ -1397,9 +1426,6 @@ h1, h2, h3, h4, h5, h6 {
   .basket__left {
     width: 80%;
   }
-  .basket__item {
-    max-width: 100%;
-  }
   .delivery__form {
     display: flex;
     justify-content: space-around;
@@ -1540,6 +1566,9 @@ h1, h2, h3, h4, h5, h6 {
   .offer__item-long {
     width: 75%;
   }
+  .basket__item-title {
+    margin-bottom: 42px;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -1600,6 +1629,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (max-width: 425px) {
+  .basket .container {
+    padding: 0 8px;
+  }
   .intro__text {
     font-size: 20px;
     line-height: 24px;
@@ -1652,6 +1684,13 @@ h1, h2, h3, h4, h5, h6 {
   }
   .products-more {
     padding-bottom: 64px;
+  }
+  .basket {
+    padding-top: 39px;
+  }
+  .basket__item-title {
+    font-size: 16px;
+    line-height: 19px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
