--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,3 +1,5 @@
+@import "_vars.sass"
+
 html 
   box-sizing: border-box
 
@@ -888,9 +890,11 @@ h1, h2, h3, h4, h5, h6
   color: #F26376
 
 // BASKET PAGE
-.category.shopping-cart
+.category.shopping-cart,
+.category.registration-header
   padding: 60px 0
 .category__title.shopping-cart__title
+.category__title.registration__title
   margin-bottom: 0
 .basket
   padding-top: 96px
@@ -902,10 +906,15 @@ h1, h2, h3, h4, h5, h6
   max-width: 652px 
   width: 100%
 .basket__item
-  display: flex
+  position: relative
   width: 100%
   box-shadow: 17px 19px 24px rgba(0, 0, 0,0.13 )
   margin-bottom: 40px
+  transition: all .3s ease-out
+  &:hover
+    box-shadow: 17px 19px 24px rgba(0, 0, 0,0.25 )
+.basket__item-link
+  display: flex
 .basket__item-info
   padding: 22px 97px 62px 31px
   width: 100%
@@ -938,6 +947,14 @@ h1, h2, h3, h4, h5, h6
 .basket-description__row dd
   color: #6F6E6E
   margin-left: 8px
+.basket__item-delete
+  position: absolute
+  top: 28px
+  right: 22px
+  border: 0
+  background-color: transparent
+  padding: 0    
+  cursor: pointer
 dd.basket__item-price
   font-size: 22px
   line-height: 26px
@@ -1031,7 +1048,112 @@ dd.basket__item-price
     color: #F16D7F
     margin-left: 24px
 
- 
+// REGISTRATION PAGE
+.registration
+  padding-top: 64px
+  padding-bottom: 96px
+  &__inner
+    display: flex
+    justify-content: space-between
+  &__left
+    width: 360px
+    flex-shrink: 0
+  &__right
+    width: (652px * 100%)/$container_width
+    margin-left: 22px
+  &__info
+    padding-right: 27px
+    font-weight: 300
+    font-size: 24px
+    color: #000000
+    & p
+      margin-bottom: 21px
+      line-height: 29px
+  &__info-title
+    text-transform: uppercase
+    line-height: 29px
+    margin-bottom: 22px
+  &__form
+    position: relative
+  &__btn
+    font-size: 14px
+    line-height: 17px
+    color: #FFFFFF
+    padding: 16px 29px
+    background-color: #F16D7F
+    border: 0
+    cursor: pointer
+    transition: all .3s ease-out
+    &:hover
+      background-color: darken(#F16D7F, 10%)
+    & span
+      padding-right: 37px
+      position: relative
+      &::after
+        content: url('../images/arrow-btn-right.svg')
+        position: absolute
+        right: 0
+
+  &__info-list
+    list-style: none
+    & > li
+      margin-bottom: 16px
+      &:last-of-type
+        margin-bottom: 0    
+      &::before
+        content: url('../images/check.svg')
+        margin-right: 22px
+.form__personal-data,
+.form__login-details
+  & p 
+    font-weight: 300
+    font-size: 16px
+    line-height: 19px
+    color: #222222
+    margin-bottom: 20px
+    &.form__password-text
+      font-size: 13px
+      line-height: 16px
+      color: #B1B1B1
+
+.form__sex-block
+  display: flex
+  margin-top: 31px
+  margin-bottom: 33px
+  & label
+    display: flex
+    align-items: center
+    padding-left: 22px
+    margin-right: 20px
+    &:last-of-type
+      margin-right: 0
+.option
+  font-weight: 300
+  font-size: 11px
+  line-height: 13px
+  color: #000000
+.radio__input
+  position: absolute
+  -webkit-appearance: none
+.radio__box
+  position: absolute
+  width: 17px
+  height: 17px
+  border-radius: 50%
+  border: 1px solid #A4A4A4
+  margin-left: -22px
+.radio__input:checked + .radio__box::before
+  content: ""
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  width: 8.5px
+  height: 8.5px
+  border-radius: 50%
+  background-color: #F16D7F
+.radio__input:focus + .radio__box
+  border: 2px solid #555
 // MEDIA QUERIES
 
 @media screen and ( max-width: 1126px )
@@ -1128,6 +1250,9 @@ dd.basket__item-price
     width: 100%
   .basket__buttons
     justify-content: center
+  .registration__info
+    font-size: 16px
+    padding-right: 0
 @media screen and ( max-width: 756px )
   .delivery__form
     flex-direction: column
@@ -1149,6 +1274,13 @@ dd.basket__item-price
     width: 75%
   .basket__item-title
     margin-bottom: 42px
+  .registration__inner
+    flex-direction: column
+    align-items: center
+  .registration__left
+    margin-bottom: 40px
+  .registration__right
+    margin-left: 0
   
 
 @media screen and ( max-width: 576px )
@@ -1166,6 +1298,11 @@ dd.basket__item-price
     padding-bottom: 96px
   .basket__item-info
     padding: 13px 53px 37px 17px
+  .registration__left
+    width: 100%
+    margin-bottom: 40px
+  .registration__right
+    width: 100%
 @media screen and ( max-width: 500px )
   .products
     justify-content: center
@@ -1234,3 +1371,12 @@ dd.basket__item-price
   .basket__item-title 
     font-size: 16px
     line-height: 19px
+  .basket__item-delete
+    top: 17px
+    right: 12px
+  .basket__item-delete svg
+    width: 10px
+    height: 11px
+@media screen and ( max-width: 370px )
+  .basket__total-btn
+    font-size: 14px
